Se han actualizado los nombres de los archivos para que no dependan de la regla my

--- a/src/components/googleWeb-Components1.html
+++ b/src/components/googleWeb-Components1.html
@@ -2,7 +2,7 @@
 <link rel="import" href="/bower_components/google-map/google-map.html">
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
 
-<dom-module id="my-googleWebComponents1">
+<dom-module id="googleWeb-Components1">
   <!-- Defines the element's style and local DOM -->
   <template>
     <style>
@@ -31,7 +31,7 @@
 
   <script>
     Polymer({
-      is: 'my-googleWebComponents1'
+      is: 'googleWeb-Components1'
     });
 
     var latitud, longitud = 0;
