--- a/src/components/googleWeb-Components2.html
+++ b/src/components/googleWeb-Components2.html
@@ -2,7 +2,7 @@
 <link rel="import" href="/bower_components/google-signin/google-signin.html">
 <link rel="import" href="/bower_components/paper-card/paper-card.html">
 
-<dom-module id="my-googleWebComponents2">
+<dom-module id="googleWeb-Components2">
   <!-- Defines the element's style and local DOM -->
   <template id="mainTemplate">
     <style>
@@ -30,7 +30,7 @@
 
   <script>
     Polymer({
-      is: 'my-googleWebComponents2',
+      is: 'googleWeb-Components2',
       listeners: {
         //'dom-change': 'domElem',
         'google-signout-attempted' : 'handleSignOut',
