--- a/src/components/googleWeb-Components3.html
+++ b/src/components/googleWeb-Components3.html
@@ -1,7 +1,7 @@
 <link rel="import" href="/bower_components/polymer/polymer.html">
 <link rel="import" href="/bower_components/google-chart/google-chart.html">
 
-<dom-module id="my-googleWebComponents3">
+<dom-module id="googleWeb-Components3">
   <!-- Defines the element's style and local DOM -->
   <template id="mainTemplate">
     <style>
@@ -42,7 +42,7 @@
 
   <script>
     Polymer({
-      is: 'my-googleWebComponents3',
+      is: 'googleWeb-Components3',
       /*
       listeners: {
         //'dom-change': 'domElem',
